--- a/full_demo/full_demo/Base.lproj/Main.storyboard
+++ b/full_demo/full_demo/Base.lproj/Main.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9058" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9048"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -118,10 +119,10 @@
                                 </constraints>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="color" keyPath="startColor">
-                                        <color key="value" red="0.22816593330000001" green="0.99948955240000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="color" keyPath="endColor">
-                                        <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="value" red="0.16246340240000001" green="0.87259599789999998" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                                 <variation key="default">
@@ -290,7 +291,9 @@
                                         <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                         <animations/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="72" id="Hs7-xT-xSp"/>
+                                            <constraint firstAttribute="width" constant="72" id="Hs7-xT-xSp">
+                                                <variation key="heightClass=regular-widthClass=compact" constant="200"/>
+                                            </constraint>
                                             <constraint firstAttribute="height" constant="21" id="Q83-bf-1qZ"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -432,7 +435,9 @@
                                         <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                         <animations/>
                                         <constraints>
-                                            <constraint firstAttribute="width" constant="72" id="5j3-yD-emr"/>
+                                            <constraint firstAttribute="width" constant="72" id="5j3-yD-emr">
+                                                <variation key="heightClass=regular-widthClass=compact" constant="200"/>
+                                            </constraint>
                                             <constraint firstAttribute="height" constant="21" id="N90-50-lI1"/>
                                         </constraints>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -544,29 +549,6 @@
                                             </mask>
                                         </variation>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Graph" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ba-QJ-bTA">
-                                        <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                                        <animations/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="72" id="13D-U5-s4y"/>
-                                            <constraint firstAttribute="height" constant="21" id="uHf-Bq-G9C"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                        <variation key="default">
-                                            <mask key="constraints">
-                                                <exclude reference="13D-U5-s4y"/>
-                                                <exclude reference="uHf-Bq-G9C"/>
-                                            </mask>
-                                        </variation>
-                                        <variation key="heightClass=regular-widthClass=compact">
-                                            <mask key="constraints">
-                                                <include reference="13D-U5-s4y"/>
-                                                <include reference="uHf-Bq-G9C"/>
-                                            </mask>
-                                        </variation>
-                                    </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oys-9v-hxL">
                                         <rect key="frame" x="-42" y="-21" width="42" height="21"/>
                                         <animations/>
@@ -587,6 +569,31 @@
                                             <mask key="constraints">
                                                 <include reference="FIM-yn-4qZ"/>
                                                 <include reference="pd0-Gx-hD6"/>
+                                            </mask>
+                                        </variation>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Graph" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ba-QJ-bTA">
+                                        <rect key="frame" x="-42" y="-21" width="42" height="21"/>
+                                        <animations/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="72" id="13D-U5-s4y">
+                                                <variation key="heightClass=regular-widthClass=compact" constant="200"/>
+                                            </constraint>
+                                            <constraint firstAttribute="height" constant="21" id="uHf-Bq-G9C"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="13D-U5-s4y"/>
+                                                <exclude reference="uHf-Bq-G9C"/>
+                                            </mask>
+                                        </variation>
+                                        <variation key="heightClass=regular-widthClass=compact">
+                                            <mask key="constraints">
+                                                <include reference="13D-U5-s4y"/>
+                                                <include reference="uHf-Bq-G9C"/>
                                             </mask>
                                         </variation>
                                     </label>
@@ -625,8 +632,8 @@
                                 <variation key="default">
                                     <mask key="subviews">
                                         <exclude reference="TNo-t7-Hp2"/>
-                                        <exclude reference="9ba-QJ-bTA"/>
                                         <exclude reference="oys-9v-hxL"/>
+                                        <exclude reference="9ba-QJ-bTA"/>
                                     </mask>
                                     <mask key="constraints">
                                         <exclude reference="18d-KC-1f3"/>
@@ -645,8 +652,8 @@
                                 <variation key="heightClass=regular-widthClass=compact">
                                     <mask key="subviews">
                                         <include reference="TNo-t7-Hp2"/>
-                                        <include reference="9ba-QJ-bTA"/>
                                         <include reference="oys-9v-hxL"/>
+                                        <include reference="9ba-QJ-bTA"/>
                                     </mask>
                                     <mask key="constraints">
                                         <exclude reference="18d-KC-1f3"/>
@@ -665,7 +672,6 @@
                             </view>
                         </subviews>
                         <animations/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="cWF-On-boT" firstAttribute="top" secondItem="x3l-Wx-hia" secondAttribute="bottom" constant="15" id="5wa-nj-irb"/>
@@ -689,6 +695,11 @@
                                 <exclude reference="nq1-sF-mrh"/>
                             </mask>
                             <mask key="constraints">
+                                <exclude reference="5wa-nj-irb"/>
+                                <exclude reference="9Sf-Rz-GEJ"/>
+                                <exclude reference="ARs-Mu-tKm"/>
+                                <exclude reference="aiA-JK-g53"/>
+                                <exclude reference="ljE-hu-8Bq"/>
                                 <exclude reference="GAR-tQ-WNu"/>
                                 <exclude reference="qPK-7r-IAE"/>
                                 <exclude reference="8Ld-nS-VDS"/>
@@ -697,11 +708,6 @@
                                 <exclude reference="Re7-Uj-oPq"/>
                                 <exclude reference="kZg-X5-OtW"/>
                                 <exclude reference="p0S-qF-29O"/>
-                                <exclude reference="5wa-nj-irb"/>
-                                <exclude reference="9Sf-Rz-GEJ"/>
-                                <exclude reference="ARs-Mu-tKm"/>
-                                <exclude reference="aiA-JK-g53"/>
-                                <exclude reference="ljE-hu-8Bq"/>
                             </mask>
                         </variation>
                         <variation key="heightClass=regular-widthClass=compact">
@@ -711,6 +717,11 @@
                                 <include reference="nq1-sF-mrh"/>
                             </mask>
                             <mask key="constraints">
+                                <include reference="5wa-nj-irb"/>
+                                <include reference="9Sf-Rz-GEJ"/>
+                                <include reference="ARs-Mu-tKm"/>
+                                <include reference="aiA-JK-g53"/>
+                                <include reference="ljE-hu-8Bq"/>
                                 <include reference="GAR-tQ-WNu"/>
                                 <include reference="qPK-7r-IAE"/>
                                 <include reference="8Ld-nS-VDS"/>
@@ -719,11 +730,6 @@
                                 <include reference="Re7-Uj-oPq"/>
                                 <include reference="kZg-X5-OtW"/>
                                 <include reference="p0S-qF-29O"/>
-                                <include reference="5wa-nj-irb"/>
-                                <include reference="9Sf-Rz-GEJ"/>
-                                <include reference="ARs-Mu-tKm"/>
-                                <include reference="aiA-JK-g53"/>
-                                <include reference="ljE-hu-8Bq"/>
                             </mask>
                         </variation>
                         <connections>
